# NiGUIri

./: .gitmodules  INiriSettings.cs  NiGUIri.csproj  NiriSettings.cs  Program.cs  README.md  au.alysia.niguiri.json  meson.build
data/: au.alysia.niguiri.desktop.in  au.alysia.niguiri.gschema.xml  au.alysia.niguiri.metainfo.xml.in  au.alysia.niguiri.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build  niguiri.pot
src/: application.vala  main.vala  meson.build  niguiri.gresource.xml  window.ui  window.vala
